# MVA

./: .gitignore  README.md  crypto_crash.ipynb  main.py  pyproject.toml
BML/: requirements.txt
BML/results/: discrepancies.csv
Bayesian Machine Learning/notebooks/: 1c. Hierarchical Logistic Regression.ipynb  5. Neal's Funnel.ipynb
Biostatistics/presentation/: bibliography.bib  presentation.tex
Biostatistics/report/: bibliography.bib  report.tex  theme.sty
DL/: constant.py  convert_voc_to_yolo_format.py  eval_for_ft_model.py  requirements.txt
DL/notebooks/: AdvTraining.ipynb
Deep Learning/: .gitignore  README.md  create_adv_dataset.py  print_bboxes.py  training.py
Statistical Learning with Extreme Values/: HW1_Adonis_JAMAL.ipynb  HW2_Adonis_JAMAL_Lab.ipynb
TP4/: TP4.ipynb  last_layer_finetune.pth
TP6/: TP6_GAN&Denoising.ipynb
deliverables/: presentation.tex
dlp/: .gitignore  pyproject.toml
dlp/TP1/: TP1_Pb2_Regression.ipynb
dlp/TP3/: class_model_gnn.py
dlp/TP5/: TP5.ipynb
ipi-project/: pyproject.toml
notebooks/: 1. Baseline Implementation.ipynb  1a. Multivariate Normal.ipynb  1b. Bayesian Logistic Regression.ipynb  1c. Hierarchical Logistic Regression.ipynb  1d. Stochastic Volatility.ipynb  2. ABM Experiments.ipynb  2. Discrepancies.ipynb  3. Multimodal Stress Test.ipynb  4. Dense Correlation Test.ipynb  5. Neal's Funnel.ipynb
paper/: bibliography.bib  presentation_EV.tex  report.tex
presentation/: presentation.tex
report/: report.tex
scripts/: plot_initial_distributions.py  run_abm_experiments.py
tests/: test_baseline.py
(+92 files in other folders)
